// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentAPI renders with mandatory props for one component 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-0 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    margin-left: 8.333333333333334%;
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    padding: 0 12px;
    margin-top: 24px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

.emotion-2 {
  overflow-x: auto;
}

.emotion-3 {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

.emotion-4 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #162740;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.62;
  font-weight: 700;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  min-width: 64px;
  white-space: nowrap;
}

.emotion-5 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #162740;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.62;
  font-weight: 700;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  min-width: 100px;
  white-space: nowrap;
}

.emotion-8 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #162740;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.62;
  font-weight: 700;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  width: 100px;
  white-space: nowrap;
}

.emotion-9 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 0 0 1px 0;
  color: #555E74;
  font-family: 'DM Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
  border-width: 0;
}

.emotion-10 {
  padding: 16px 16px 16px 0;
  text-align: left;
  vertical-align: top;
}

.emotion-11 {
  padding: 16px 16px 16px 0;
  min-width: 100px;
  text-align: left;
  vertical-align: top;
}

.emotion-12 {
  margin: 0;
  padding: 0;
  color: #555E74;
  white-space: nowrap;
  font-family: 'DM Mono',monospace;
  font-size: 14px;
  font-weight: 500;
  line-height: 1.5;
  letter-spacing: 0;
}

.emotion-12 svg {
  fill: #555E74;
}

.emotion-15 {
  padding: 16px 16px 16px 0;
  width: 100px;
  text-align: left;
  vertical-align: top;
}

.emotion-16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 24px;
  height: 24px;
}

.emotion-17 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 24px;
  height: 24px;
  padding: 4px 8px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  border-style: solid;
  border-color: #67CF86;
  background-color: #E6FAEB;
  border-radius: 50%;
  border-width: 1px;
}

.emotion-17 svg {
  width: 16px;
  height: 16px;
}

.emotion-17 svg {
  fill: #148F39;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-19 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-19 {
    max-width: 100%;
  }
}

.emotion-20 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #148F39;
  vertical-align: unset;
  display: inline-block;
}

.emotion-20.emotion-20 {
  fill: #148F39;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <table
          class="emotion-3"
        >
          <thead>
            <tr>
              <th
                class="emotion-4"
              >
                Name
              </th>
              <th
                class="emotion-5"
              >
                Type
              </th>
              <th
                class="emotion-5"
              >
                Default
              </th>
              <th
                class="emotion-5"
              >
                Description
              </th>
              <th
                class="emotion-8"
              >
                Required
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="emotion-9"
            >
              <td
                class="emotion-10"
              >
                children
              </td>
              <td
                class="emotion-11"
              >
                <p
                  class="emotion-12"
                >
                  string
                </p>
              </td>
              <td
                class="emotion-11"
              />
              <td
                class="emotion-11"
              >
                Description.
              </td>
              <td
                class="emotion-15"
              >
                <div
                  class="emotion-16"
                >
                  <div
                    class="emotion-17"
                    data-testid="flag"
                  >
                    <div
                      class="emotion-18"
                    >
                      <div
                        class="emotion-19"
                      >
                        <svg
                          aria-hidden="true"
                          class="emotion-20 emotion-21"
                          fill="currentColor"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M0 0h24v24H0V0z"
                            fill="none"
                          />
                          <path
                            d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41L9 16.17z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ComponentAPI renders with props for multiple components 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-0 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    margin-left: 8.333333333333334%;
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    padding: 0 12px;
    margin-top: 24px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

.emotion-1 {
  margin-bottom: 80px;
}

@media screen and (max-width: 767px) {
  .emotion-2 {
    margin-bottom: 16px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-2 {
    margin-bottom: 20px;
  }
}

.emotion-3 {
  margin: 0;
  padding: 1px 0;
  color: #162740;
  display: inline-block;
}

.emotion-3 svg {
  fill: #162740;
}

@media screen and (max-width: 1439px) {
  .emotion-3 {
    font-family: 'Poppins',sans-serif;
    font-size: 20px;
    line-height: 1.4;
    font-weight: 700;
    letter-spacing: 0;
  }

  .emotion-3::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.334375em;
  }

  .emotion-3::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.475em;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-3 {
    font-family: 'Poppins',sans-serif;
    font-size: 24px;
    line-height: 1.3333333333333333;
    font-weight: 700;
    letter-spacing: 0;
  }

  .emotion-3::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.30104166666666665em;
  }

  .emotion-3::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.44166666666666665em;
  }
}

.emotion-4 {
  margin-bottom: 40px;
}

.emotion-5 {
  margin: 0;
  padding: 1px 0;
  color: #555E74;
}

.emotion-5 svg {
  fill: #555E74;
}

@media screen and (max-width: 1439px) {
  .emotion-5 {
    font-family: 'DM Sans',sans-serif;
    font-size: 16px;
    line-height: 1.5;
    font-weight: 400;
    letter-spacing: 0;
  }

  .emotion-5::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.415625em;
  }

  .emotion-5::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.446875em;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-5 {
    font-family: 'DM Sans',sans-serif;
    font-size: 18px;
    line-height: 1.3333333333333333;
    font-weight: 400;
    letter-spacing: 0;
  }

  .emotion-5::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.33229166666666665em;
  }

  .emotion-5::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.36354166666666665em;
  }
}

.emotion-6 {
  overflow-x: auto;
}

.emotion-7 {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

.emotion-8 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #162740;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.62;
  font-weight: 700;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  min-width: 64px;
  white-space: nowrap;
}

.emotion-9 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #162740;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.62;
  font-weight: 700;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  min-width: 100px;
  white-space: nowrap;
}

.emotion-12 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #162740;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.62;
  font-weight: 700;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  width: 100px;
  white-space: nowrap;
}

.emotion-13 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 0 0 1px 0;
  color: #555E74;
  font-family: 'DM Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
  border-width: 0;
}

.emotion-14 {
  padding: 16px 16px 16px 0;
  text-align: left;
  vertical-align: top;
}

.emotion-15 {
  padding: 16px 16px 16px 0;
  min-width: 100px;
  text-align: left;
  vertical-align: top;
}

.emotion-16 {
  margin: 0;
  padding: 0;
  color: #555E74;
  white-space: nowrap;
  font-family: 'DM Mono',monospace;
  font-size: 14px;
  font-weight: 500;
  line-height: 1.5;
  letter-spacing: 0;
}

.emotion-16 svg {
  fill: #555E74;
}

.emotion-19 {
  padding: 16px 16px 16px 0;
  width: 100px;
  text-align: left;
  vertical-align: top;
}

.emotion-20 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 24px;
  height: 24px;
}

.emotion-21 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 24px;
  height: 24px;
  padding: 4px 8px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  border-style: solid;
  border-color: #67CF86;
  background-color: #E6FAEB;
  border-radius: 50%;
  border-width: 1px;
}

.emotion-21 svg {
  width: 16px;
  height: 16px;
}

.emotion-21 svg {
  fill: #148F39;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-23 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-23 {
    max-width: 100%;
  }
}

.emotion-24 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #148F39;
  vertical-align: unset;
  display: inline-block;
}

.emotion-24.emotion-24 {
  fill: #148F39;
}

.emotion-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: column;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
}

.emotion-32 {
  position: relative;
  z-index: 0;
  margin-bottom: 32px;
}

.emotion-33 {
  box-sizing: border-box;
  position: relative;
  overflow: hidden;
  height: 100%;
}

.emotion-34 {
  box-sizing: border-box;
  height: 100%;
  overflow-x: auto;
  overflow-y: auto;
  scroll-behavior: smooth;
  scroll-snap-type: x mandatory;
}

.emotion-34::-webkit-scrollbar {
  display: none;
}

.emotion-34 {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.emotion-35 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
  border-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  overflow: hidden;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-36>* {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-37 {
  scroll-snap-align: start;
}

.emotion-38 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-39 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  width: 100%;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  border-radius: borderRadiusSharp;
  background-color: transparent;
  color: #677483;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
  border-radius: borderRadiusSharp;
  background-color: transparent;
  color: #162740;
  border-color: #577FFB;
}

.emotion-39 svg {
  width: 24px;
  height: 24px;
}

.emotion-39:hover:not(:disabled) {
  color: #555E74;
}

.emotion-39:active:not(:disabled) {
  color: #555E74;
}

.emotion-40 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-41 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-41 {
    max-width: 100%;
  }
}

.emotion-42 {
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 600;
  letter-spacing: 0;
}

.emotion-42::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3486607142857143em;
}

.emotion-42::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4892857142857143em;
}

.emotion-44 {
  scroll-snap-align: end;
}

.emotion-46 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  width: 100%;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  border-radius: borderRadiusSharp;
  background-color: transparent;
  color: #677483;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-46 svg {
  width: 24px;
  height: 24px;
}

.emotion-46:hover:not(:disabled) {
  color: #555E74;
}

.emotion-46:active:not(:disabled) {
  color: #555E74;
}

.emotion-50 {
  background-color: #577FFB;
  position: absolute;
  z-index: 2;
  bottom: 0px;
  left: 0px;
}

.emotion-51 {
  background-color: #E4E4E4;
  display: block;
  position: absolute;
  z-index: 1;
  width: 100%;
  height: 2px;
  bottom: 0px;
  left: 0px;
}

.emotion-52 {
  margin: 0;
  padding: 1px 0;
  width: 100%;
}

.emotion-82 {
  margin-left: 0px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <span
          class="emotion-3"
        >
          Button1
        </span>
      </div>
      <div
        class="emotion-4"
      >
        <p
          class="emotion-5"
        >
          Component Props
        </p>
      </div>
      <div
        class="emotion-6"
      >
        <table
          class="emotion-7"
        >
          <thead>
            <tr>
              <th
                class="emotion-8"
              >
                Name
              </th>
              <th
                class="emotion-9"
              >
                Type
              </th>
              <th
                class="emotion-9"
              >
                Default
              </th>
              <th
                class="emotion-9"
              >
                Description
              </th>
              <th
                class="emotion-12"
              >
                Required
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="emotion-13"
            >
              <td
                class="emotion-14"
              >
                children
              </td>
              <td
                class="emotion-15"
              >
                <p
                  class="emotion-16"
                >
                  string
                </p>
              </td>
              <td
                class="emotion-15"
              />
              <td
                class="emotion-15"
              >
                Description
              </td>
              <td
                class="emotion-19"
              >
                <div
                  class="emotion-20"
                >
                  <div
                    class="emotion-21"
                    data-testid="flag"
                  >
                    <div
                      class="emotion-22"
                    >
                      <div
                        class="emotion-23"
                      >
                        <svg
                          aria-hidden="true"
                          class="emotion-24 emotion-25"
                          fill="currentColor"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M0 0h24v24H0V0z"
                            fill="none"
                          />
                          <path
                            d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41L9 16.17z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="emotion-26"
    >
      <div
        class="emotion-2"
      >
        <span
          class="emotion-3"
        >
          Button2
        </span>
      </div>
      <div
        class="emotion-4"
      >
        <p
          class="emotion-5"
        >
          Component Props
        </p>
      </div>
      <div
        class="emotion-31"
        data-testid="tab-group"
      >
        <div
          class="emotion-32"
          data-testid="tab-bar"
        >
          <div
            class="emotion-33"
          >
            <div
              aria-orientation="horizontal"
              class="emotion-34"
              data-testid="scroll-container"
              tabindex="0"
            >
              <div
                aria-orientation="horizontal"
                class="emotion-35"
                role="tablist"
              >
                <div
                  class="emotion-36"
                  data-testid="distribution-wrapper"
                >
                  <div
                    class="emotion-37"
                  >
                    <div
                      class="emotion-38"
                    >
                      <button
                        aria-controls="mock-nk-1"
                        aria-selected="true"
                        class="emotion-39"
                        data-testid="tab"
                        id="mock-nk-1"
                        role="tab"
                        tabindex="0"
                        type="button"
                      >
                        <div
                          class="emotion-40"
                        >
                          <div
                            class="emotion-41"
                          >
                            <span
                              class="emotion-42"
                            >
                              Props
                            </span>
                          </div>
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="emotion-36"
                  data-testid="distribution-wrapper"
                >
                  <div
                    class="emotion-44"
                  >
                    <div
                      class="emotion-38"
                    >
                      <button
                        aria-controls="mock-nk-1"
                        aria-selected="false"
                        class="emotion-46"
                        data-testid="tab"
                        id="mock-nk-1"
                        role="tab"
                        tabindex="-1"
                        type="button"
                      >
                        <div
                          class="emotion-40"
                        >
                          <div
                            class="emotion-41"
                          >
                            <span
                              class="emotion-42"
                            >
                              Overrides
                            </span>
                          </div>
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="emotion-50"
                  data-testid="tab-bar-indicator"
                  role="presentation"
                  style="width: 0px; height: 2px; transform: translateX(0px);"
                />
              </div>
            </div>
          </div>
          <div
            class="emotion-51"
            data-testid="tab-bar-track"
            role="presentation"
          />
        </div>
        <div
          aria-hidden="false"
          aria-labelledby="mock-nk-1"
          class="emotion-52"
          data-testid="tab-panel"
          role="tabpanel"
          tabindex="0"
        >
          <div
            class="emotion-6"
          >
            <table
              class="emotion-7"
            >
              <thead>
                <tr>
                  <th
                    class="emotion-8"
                  >
                    Name
                  </th>
                  <th
                    class="emotion-9"
                  >
                    Type
                  </th>
                  <th
                    class="emotion-9"
                  >
                    Default
                  </th>
                  <th
                    class="emotion-9"
                  >
                    Description
                  </th>
                  <th
                    class="emotion-12"
                  >
                    Required
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  class="emotion-13"
                >
                  <td
                    class="emotion-14"
                  >
                    children
                  </td>
                  <td
                    class="emotion-15"
                  >
                    <p
                      class="emotion-16"
                    >
                      string
                    </p>
                  </td>
                  <td
                    class="emotion-15"
                  />
                  <td
                    class="emotion-15"
                  >
                    Description
                  </td>
                  <td
                    class="emotion-19"
                  >
                    <div
                      class="emotion-20"
                    >
                      <div
                        class="emotion-21"
                        data-testid="flag"
                      >
                        <div
                          class="emotion-22"
                        >
                          <div
                            class="emotion-23"
                          >
                            <svg
                              aria-hidden="true"
                              class="emotion-24 emotion-25"
                              fill="currentColor"
                              focusable="false"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M0 0h24v24H0V0z"
                                fill="none"
                              />
                              <path
                                d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41L9 16.17z"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="mock-nk-1"
          class="emotion-52"
          data-testid="tab-panel"
          hidden=""
          role="tabpanel"
          tabindex="-1"
        >
          <div
            class="emotion-6"
          >
            <table
              class="emotion-7"
            >
              <thead>
                <tr>
                  <th
                    class="emotion-9"
                  >
                    Attribute
                  </th>
                  <th
                    class="emotion-9"
                  >
                    Type
                  </th>
                  <th
                    class="emotion-9"
                  >
                    Default
                  </th>
                  <th
                    class="emotion-9"
                  >
                    Description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  class="emotion-13"
                >
                  <td
                    class="emotion-15"
                  >
                    <div
                      class="emotion-82"
                    >
                      <p
                        class="emotion-16"
                      >
                        spaceInset
                      </p>
                    </div>
                  </td>
                  <td
                    class="emotion-15"
                  >
                    <p
                      class="emotion-16"
                    >
                      MQ&lt;string&gt;
                    </p>
                  </td>
                  <td
                    class="emotion-15"
                  />
                  <td
                    class="emotion-15"
                  >
                    Description.
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
